k8s/collaudo/testapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp-service
spec:
  selector:
    app: testapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
