k8s/collaudo/testws-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testws-service
spec:
  selector:
    app: testws
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
