k8s/collaudo/testapp-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: testapp
  name: testapp-route
spec:
  host: testapp-test.apps.os4.insiel.it
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: testapp-service
    weight: 100
  wildcardPolicy: None
